--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,17 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.8.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "axios": "^1.4.0",
+    "socket.io-client": "^4.6.1",
     "solid-js": "^1.6.10"
   }
 }
