--- a/app/package.json
+++ b/app/package.json
@@ -17,9 +17,13 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@melodev/solid-datepicker": "^0.1.15",
     "@solidjs/router": "^0.8.2",
     "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.4.0",
+    "check-password-strength": "^2.0.7",
+    "date-fns": "^2.30.0",
+    "moment": "^2.29.4",
     "socket.io-client": "^4.6.1",
     "solid-js": "^1.6.10"
   }
