--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "check-password-strength": "^2.0.7",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "socket.io-client": "^4.6.1",
     "solid-js": "^1.6.10"
