--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "ejs": "^3.1.9",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
     "file-type": "^18.3.0",
     "jsonwebtoken": "^9.0.0",
