--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "exceljs": "^4.3.0",
